added dev and prod apk versions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,18 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    flavorDimensions "version"
+    productFlavors {
+        dev {
+            dimension "version"
+            versionNameSuffix "-dev"
+            signingConfig signingConfigs.config
+        }
+        prod {
+            dimension "version"
+            signingConfig signingConfigs.config
+        }
+    }
 }
 
 dependencies {
