--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'androidx.navigation.safeargs'
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
@@ -99,4 +100,6 @@ dependencies {
     implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     implementation 'com.github.bumptech.glide:annotations:4.8.0'
     implementation 'com.firebaseui:firebase-ui-storage:4.2.1'
+    implementation 'com.prof.rssparser:rssparser:1.4.4'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
