--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,5 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:4.2.1'
     implementation 'com.prof.rssparser:rssparser:1.4.4'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
